[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rockit_autoreconstruction_ui"
version = "0.0.0.1"
authors = [
  { name="Jean", email="j35@ornl.gov" }]
description = ""
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ornlneutronimaging/rockit_autoreconstruction_ui"
"Bug Tracker" = "https://github.com/ornlneutronimaging/rockit_autoreconstruction_ui/issues/"